fix link from inner search results (#1010)

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -8579,7 +8579,7 @@ a.result + #matches.mobile,
 
 @media (max-width:375px)
 {
-   .nav > div > #logo { display:none; }
+   /* .nav > div > #logo { display:none; } */
 }
 
 @media (max-width:400px)
