fix filter icon position when no result (#1012)

--- a/src/lib/searchkit/App.css
+++ b/src/lib/searchkit/App.css
@@ -2565,6 +2565,10 @@ header[data-hits="0"] ~ .hits .pagination,
   #root .resource.etext-outline.withOutline-true~.withOutline {
     margin-top:calc(-100vh);
   }
+
+  .main-content header[data-hits="0"]+div {
+    height:calc(50vh);
+  }
 }
 
 
