--- a/src/components/App.css
+++ b/src/components/App.css
@@ -5185,6 +5185,10 @@ h4:hover a.no-bdrc img { opacity:1; }
 
 .resource .data.access.sealed h3::before { background-image:url("/icons/sealed.svg");  }
 
+.resource .data.access.redirect h3::before { content:none;  }
+
+.resource .data.access.redirect h3 > svg { width:32px; height:32px;}
+
 .resource .data.top-props .has-collapse:not(.custom):last-child { margin-bottom:-25px; }
 
 .resource .data { text-align:left ; background-color:#ffffff; padding:20px 100px;}
