--- a/src/components/App.css
+++ b/src/components/App.css
@@ -317,6 +317,11 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
 }
 .msg-popup .front .close { color:#555; position:absolute; right:15px; top:15px; cursor: pointer;}
 
+.nav.nav:not(.etext-nav).msgPopupOn ~ div:last-child {
+   position: relative;
+   z-index:100000;
+}
+
 #root > div > :not(.static):first-child ~ .nav:not(.etext-nav).msgPopupOn::after { content:''; position: absolute; width:100%;height:100%;background:rgba(0,0,0,0.5); z-index: 1;}
 #root > div > :not(.static):first-child ~ .nav:not(.etext-nav).msgPopupOn { box-shadow: 0 2px 4px rgba(0,0,0,0.35); }
 
@@ -587,7 +592,7 @@ html[lang="bo"] .msg-popup .front p { font-size:18px;}
 /* --------------------------------------------------------------------------------------------------------------------- topbar */
 
 .nav { width:100%; height:80px; position:fixed;top:0;left:0;background:white; display:flex;align-items: center; justify-content: center;
-   box-shadow: 0 2px 4px rgba(187, 187, 187, 0.5); z-index:100010; 
+   box-shadow: 0 2px 4px rgba(187, 187, 187, 0.5); z-index:100000; 
 }
 
 .nav #back,.nav #back h2 span { 
@@ -682,7 +687,7 @@ body > #pop-login { z-index:1000000 ;}
 #pop-login li { display: block; min-width:80px; text-transform: uppercase; color:#d73449; font-size:14px; font-weight:600; line-height:170%;}
 
 .over-nav { display: flex; align-items: center; justify-content: center; height:50px; background:#172832; 
-   position: relative; width:100% ; z-index:100001;
+   position: relative; width:100% ; z-index:100000;
 }
 
 .over-nav .BDRC-link {
