--- a/src/lib/searchkit/App.css
+++ b/src/lib/searchkit/App.css
@@ -1791,6 +1791,12 @@ header[data-hits="0"] ~ .hits .pagination,
 }
 
 
+#root .ariane .can-shrink i {
+}
+
+#root .ariane .can-shrink u {
+}
+
 
 /*
 #viewer.mirador-container .mirador-viewer {
@@ -2697,7 +2703,8 @@ header[data-hits="0"] ~ .hits .pagination,
 
 @media (max-width:800px){
   
-  #root .ariane .can-shrink u {
+  #root .ariane .can-shrink u,
+  #root .ariane .can-shrink i {
     display:none;
   }
 
