--- a/src/lib/searchkit/App.css
+++ b/src/lib/searchkit/App.css
@@ -1792,6 +1792,7 @@ header[data-hits="0"] ~ .hits .pagination,
 
 
 #root .ariane .can-shrink i {
+  font-style: normal;
 }
 
 #root .ariane .can-shrink u {
