--- a/src/lib/searchkit/App.css
+++ b/src/lib/searchkit/App.css
@@ -1628,7 +1628,7 @@ header[data-hits="0"] ~ .hits .pagination,
   margin-top:2px;
 }
 
-.resource [data-prop="bdo:workHasInstance"]:not(#a):not(#b) {
+.resource:not(.preview) [data-prop="bdo:workHasInstance"]:not(#a):not(#b) {
   display: none !important;
 }
 
@@ -1962,7 +1962,54 @@ header[data-hits="0"] ~ .hits .pagination,
 
 @media (max-width: 1024px) {
 
-  #root > div:not(#a) > :is(.resource:not(#a).simple.preview) { padding-top:0; }
+  #root .resource.preview.place .data > div:not([data-prop="bdo:note"]):not(.header):not(.firstImage):not(#perma):is(#head),
+  #root .resource.preview .data:not(#a) [data-prop="tmp:outlineSearch"] {
+    display:none !important;
+  }
+
+  /*
+  #root .resource.preview .data:not(#perma) > div:not(.firstImage):not(.browse):not(.header)::after {
+    display: none;
+  }
+    */
+
+  .resource.preview .data h2.on span:not(.T):not(.lang):not(#a) { margin-bottom:10px;}
+
+  #root .resource.preview .data:not(#perma) > div:not(.firstImage):not(.browse):not(.header)::after {
+    margin:10px 0;
+  }
+
+  #root:not(#a) .resource.preview .data#first-image {
+    position:absolute;
+    right:0;
+    top:0;
+  }
+
+  .resource.preview .data.images-title h2 a span,
+  .resource.preview .data.images-title h2 a,
+  .resource.preview .data.images-title h2,
+  .resource.preview .data.images-title {
+    line-height:18px;
+    width:calc(100% - 90px);
+  }
+
+  .resource.preview .data h2:not(#a) { 
+    line-height:inherit; 
+  }
+  
+  .resource.preview .data.images-title h2 ~ a,
+  .resource.preview .data.images-title h2 a,
+  .resource.preview .data.images-title h2 {
+    height:18px;
+    padding-left:0;  }
+  
+
+  #root:not(#a) .resource.preview .data#perma {
+    width:100%;
+    box-sizing:border-box;
+  }
+
+  #root > div:not(#a) > :is(.resource:not(#a).preview) { padding-top:0; }
 /*
   #root {
     background:white;
