--- a/src/lib/searchkit/App.css
+++ b/src/lib/searchkit/App.css
@@ -1428,7 +1428,7 @@ header .SRHloader {
 }
 
 .App.home:not(#a) #search-bar {
-  padding-top:25px;
+  padding-top:0px;
   padding-bottom:45px;
 }
 
@@ -1438,8 +1438,11 @@ header .SRHloader {
   width:700px;
   text-align: left;
   margin: auto;
-  margin-bottom:18px;
+  margin-bottom:1px;
+  padding-top:14px;
   text-transform: capitalize;
+  font-size:22px;
+
 }
 
 
